Fixing overflow bug on iOS Safari and adding intro animation

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -13,6 +13,17 @@
 html, body {
 	background: #FAFAFA;
 
+	#page {
+		opacity: 0;
+		transform: translateY(16px);
+		transition: 1s all;
+
+		&.loaded {
+			transform: translateY(0);
+			opacity: 1;
+		}
+	}
+
 	a {
 		&.not-allowed {
 			cursor: not-allowed;
