--- a/resources/css/twitter.css
+++ b/resources/css/twitter.css
@@ -3890,6 +3890,8 @@ html[dir='rtl'] .FormValidationMessage:not([dir='ltr'])::before,
   width: 100%;
   margin-top: 10px;
   overflow: hidden;
+  -webkit-transform: translateZ(0);
+  -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
 }
 .Tweet-photoGalleryCell {
   position: relative;
